@@ -323,7 +323,7 @@ static void	process_updated_records(int nodeid, char *data)
 							size_t	len;
 
 							len = zbx_hex2binary(buf);
-							zbx_pg_escape_bytea((u_char *)buf, len, &tmp, &tmp_alloc);
+							DBbytea_escape((u_char *)buf, len, &tmp, &tmp_alloc);
 
 							if (NODE_CONFIGLOG_OP_UPDATE == op)
 								zbx_snprintf_alloc(&ufld, &ufld_alloc, &ufld_offset,
